Added basic TODOs in tasks.router

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,8 @@
     <title>Task Manager</title>
 </head>
 <body>
-    
+    <main>
+        <h2>Tasks <span id="taskNumber"></span></h2>
+    </main>
 </body>
 </html>
