--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,18 @@
 </head>
 <body>
     <main>
-        <h2>Tasks <span id="taskNumber"></span></h2>
+        <h2>Tasks</h2>
+        <h2><span id="taskNumber"></span></h2>
+        <table>
+            <thead>
+              <tr>
+                <th></th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody id="taskTable">
+            </tbody>
+        </table>
     </main>
 </body>
 </html>
