Completed client-side functions

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,6 +18,7 @@
               <tr>
                 <th></th>
                 <th></th>
+                <th id="addTask">+</th>
               </tr>
             </thead>
             <tbody id="taskTable">
