Fixed client and server side issues

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,7 +16,7 @@
         <table>
             <thead>
               <tr>
-                <th></th>
+                <th>Tasks</th>
                 <th></th>
                 <th></th>
                 <th></th>
