Completed completion of task functionality

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,7 +21,7 @@
                 <th></th>
                 <th></th>
                 <th class="description"></th>
-                <th></th>
+                <th><span class="spacer">[✔]</span></th>
                 <th class="tableEnd plus" id="addTask">+</th>
               </tr>
             </thead>
