--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,7 @@
     <script src="scripts/jquery.js"></script>
     <script src="scripts/client.js"></script>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Task Manager</title>
 </head>
 <body>
